# Cam_Localization

./: CMakeLists.txt  README.md  building_robot.sdf  micro_ros.sh  nexus.rviz  nexus.urdf  odom_to_rtdb.py  start.sh  test_ukuran_base.urdf  testaruco.py  web.html
firmware/dev_ws/install/: local_setup.sh  setup.sh
firmware/dev_ws/install/ament_clang_format/share/ament_clang_format/: package.dsv  package.sh
firmware/dev_ws/install/ament_clang_tidy/share/ament_clang_tidy/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake/share/ament_cmake/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_auto/share/ament_cmake_auto/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_clang_format/share/ament_cmake_clang_format/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_clang_tidy/share/ament_cmake_clang_tidy/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_copyright/share/ament_cmake_copyright/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_core/share/ament_cmake_core/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_cppcheck/share/ament_cmake_cppcheck/: local_setup.sh  package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_cpplint/share/ament_cmake_cpplint/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_export_definitions/share/ament_cmake_export_definitions/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_export_dependencies/share/ament_cmake_export_dependencies/: local_setup.sh  package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_export_include_directories/share/ament_cmake_export_include_directories/: local_setup.sh  package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_export_interfaces/share/ament_cmake_export_interfaces/: local_setup.sh  package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_export_libraries/share/ament_cmake_export_libraries/: local_setup.sh  package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_export_link_flags/share/ament_cmake_export_link_flags/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_export_targets/share/ament_cmake_export_targets/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_flake8/share/ament_cmake_flake8/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_gen_version_h/share/ament_cmake_gen_version_h/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_gmock/share/ament_cmake_gmock/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_google_benchmark/share/ament_cmake_google_benchmark/: local_setup.sh  package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_gtest/share/ament_cmake_gtest/: local_setup.sh  package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_include_directories/share/ament_cmake_include_directories/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_libraries/share/ament_cmake_libraries/: local_setup.sh  package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_lint_cmake/share/ament_cmake_lint_cmake/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_mypy/share/ament_cmake_mypy/: package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_pclint/share/ament_cmake_pclint/: local_setup.sh  package.dsv  package.sh
firmware/dev_ws/install/ament_cmake_pep257/share/ament_cmake_pep257/: local_setup.sh  package.dsv  package.sh
firmware/dev_ws/log/: latest_build
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/nexus_gazebo/share/nexus_gazebo/: local_setup.dsv  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/nexus_gazebo/share/nexus_gazebo/cmake/: nexus_gazeboConfig.cmake
launch/: display.launch.py  gazebo.launch.py
log/: latest_build
materials/scripts/: aruco.material
scripts/: robot_control_gui.py  robot_odom_imu_pub.py  robot_pose_mqtt_pub.py
src/: aruco.cpp  aruco_localization.cpp  calibrate_map.py  calibration_hsv.py  cam.cpp  cam_localization.cpp  cuki.py  movement.cpp  obstacle_avoidance.cpp  odom_to_rtdb.py  spawn_obs.py  spawn_robot.py  testaruco.py  waypoint.cpp
(+113 files in other folders)
